Converted browser jar to java files. Also, started on adding UA headers to browser.