@@ -84,7 +84,7 @@ public class CookieManagerDialog extends JDialog {
 
     private class CookieTableModel extends AbstractTableModel implements CefCookieVisitor {
         private final String[] columnNames;
-        private Vector<Object[]> rowData = new Vector<>();
+        private final Vector<Object[]> rowData = new Vector<>();
 
         public CookieTableModel() {
             super();
@@ -96,7 +96,7 @@ public class CookieManagerDialog extends JDialog {
         @Override
         public boolean visit(CefCookie cookie, int count, int total, BoolRef delete) {
             Object[] entry = {cookie.name, cookie.value, cookie.domain, cookie.path,
-                    new Boolean(cookie.secure), new Boolean(cookie.httponly), cookie.creation,
+					Boolean.valueOf(cookie.secure), Boolean.valueOf(cookie.httponly), cookie.creation,
                     cookie.lastAccess, cookie.expires};
             int row = rowData.size();
             rowData.addElement(entry);
